--- a/portfolio.html
+++ b/portfolio.html
@@ -93,7 +93,7 @@
 
         <div class="row">
             <div class="col-12" id="footer">
-                <p>&copy Copyright 2017 Fred Lintz</p>
+                <p>&copy Copyright 2018 Kathrin Byard</p>
             </div>
         </div>
     </body>
