--- a/portfolio.html
+++ b/portfolio.html
@@ -47,7 +47,7 @@
                             </a>
                         </li>
                         <li>
-                            <a href="https://kbyard.github.io/TriviaGame_KAB/"><img src="assets/images/Project_TriviaGame.png" height="110px"/>
+                            <a href="https://kbyard.github.io/TriviaGame_KAB/"><img src="assets/images/Project_TriviaGame.jpg" height="110px"/>
                                 <div class="portLabel">[Trivia] Game of Thrones</div>
                             </a>
                         </li>
